Fixing display on mobile and updated embedded clip url

--- a/src/js/Main/Header.scss
+++ b/src/js/Main/Header.scss
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 767px) {
   #header {
-    padding-top: .25rem;
-    padding-bottom: .25rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
   }
 }
